<resources>
  <string name="app_name">JustJava</string>
  <string name="action_settings">Settings</string>
  <string name="lbl_total">Total</string>
  <string name="lbl_nama">Nama</string>
  <string name="lbl_nama_pemesan">Nama Pemesan</string>
  <string name="lbl_topping">Topping</string>
  <string name="lbl_choco">Choco</string>
  <string name="lbl_vanilla">Vanilla</string>
  <string name="lbl_quantity">Quantity</string>
  <string name="lbl_prices">Prices</string>
  <string name="lbl_order">Order</string>
  <string name="lbl_add_choco">Add Choco</string>
  <string name="lbl_add_vanilla">Add Vanilla</string>
  <string name="lbl_thanks">Thanks</string>
</resources>
