<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

  <TextView
      android:text="@string/lbl_nama"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <EditText
      android:id="@+id/txt_nama"
      android:hint="@string/lbl_nama_pemesan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

  <TextView
      android:layout_marginTop="10dp"
      android:layout_width="wrap_content"
      android:text="@string/lbl_topping"
      android:layout_height="wrap_content"
      />
  <CheckBox
      android:id="@+id/cb_choco"
      android:layout_marginTop="10dp"
      android:text="@string/lbl_choco"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />
  <CheckBox
      android:id="@+id/cb_vanilla"
      android:text="@string/lbl_vanilla"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <TextView
      android:layout_marginTop="10dp"
      android:layout_width="wrap_content"
      android:text="@string/lbl_quantity"
      android:layout_height="wrap_content"
      />

  <LinearLayout
      android:layout_marginTop="16dp"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content"
      >
    <Button
        android:id="@+id/btn_min"
        android:layout_marginRight="10dp"
        android:text="-"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text_counter"
        android:text="0"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_plus"
        android:text="+"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        />
  </LinearLayout>

  <TextView
      android:layout_marginTop="16dp"
      android:text="@string/lbl_prices"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <TextView
      android:id="@+id/text_price"
      android:layout_marginTop="10dp"
      android:text="Total $0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <Button
      android:id="@+id/btn_order"
      android:layout_marginTop="10dp"
      android:text="@string/lbl_order"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

</LinearLayout>
